--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,19 +1,22 @@
 body {
-    background-image: url("concrete_seamless.png");
+    background-image: url("../images/concrete_seamless.png");
 }
 
-.footer-styling {
-    /* position: fixed;
-    height: 4em; */
-    /* width: 100%; */
-    bottom: 0;
-    padding-top: 1em;
-    margin-top: 1em;
+.scrollable-content {
+    margin-bottom: 60px;
+}
+
+.footer{
     color: white;
-    padding: 1em;
+    padding: 5px;
     background-color: #666666;
     text-align: center;
     border-top: 6px solid #4aaaa5;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
 }
 
 .headimage {
@@ -26,6 +29,7 @@ body {
     background-color: #ffffff;
     border: 1px solid #dddddd;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .page-title {
@@ -51,12 +55,9 @@ body {
 }
 
 .portfolio-label {
-    position: relative;
-    bottom: 30%;
     padding: 10px;
     background-color: #4aaaa5;
     color: white;
-    max-width: 400px;
 }
 
 .navbar {
