--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,16 @@
 body {
     background-image: url("../images/concrete_seamless.png");
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.brand {
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .scrollable-content {
@@ -9,9 +20,9 @@ body {
 .footer{
     color: white;
     padding: 5px;
-    background-color: #666666;
+    background-color: #D4996A;
     text-align: center;
-    border-top: 6px solid #4aaaa5;
+    border-top: 6px solid #152B55;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -27,37 +38,32 @@ body {
 
 .main-content {
     background-color: #ffffff;
-    border: 1px solid #dddddd;
+    border: 1px solid #cccccc;
     margin-top: 30px;
     margin-bottom: 30px;
 }
 
 .page-title {
-    color: #4aaaa5;
-    border-bottom: 3px solid #cccccc; 
+    color: #152B55;
+    border-bottom: 3px solid #D4996A; 
     margin-bottom: 20px;
     margin-top: 20px;
 }
 
 .page-header {
-    background-color: #ffffff;
-    border-bottom: 3px solid #cccccc;
+    background-color: #FFF0AA;
+    border-bottom: 3px solid #D4996A;
 }
 
 .brand {
-    background-color: #4aaaa5;
+    background-color: #152B55;
     padding: 10px;
+    font-size: 30px;
 }
 
-.photo-tile:hover {
+.portfolio-img:hover {
     opacity: 0.7;
     text-decoration: none;
-}
-
-.portfolio-label {
-    padding: 10px;
-    background-color: #4aaaa5;
-    color: white;
 }
 
 .navbar {
@@ -67,6 +73,7 @@ body {
 }
 
 .submit {
-    background-color: #4aaaa5;
+    background-color: #152B55;
     color: white;
 }
+
